--- a/_posts/2019-10-06-vlog-01.markdown
+++ b/_posts/2019-10-06-vlog-01.markdown
@@ -1,5 +1,5 @@
 ---
-layout:     post
+layout:     video 
 title:      "灵犀的日常#01袜袜大作战"
 date:       2019-10-06 08:25:23
 video: aid=70260754&cid=121719196&page=1
